move sharp sort ver

--- a/수업/200612_class/200612_class.vcxproj
+++ b/수업/200612_class/200612_class.vcxproj
@@ -148,7 +148,10 @@
     <ClCompile Include="Loop.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="MoveS.c" />
+    <ClCompile Include="MoveS.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="MoveSharp.c" />
     <ClCompile Include="Operator.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
