--- a/수업/200612_class/200612_class.vcxproj.filters
+++ b/수업/200612_class/200612_class.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="MoveS.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MoveSharp.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="turboc.h">
