--- a/수업/200619_FishGame_team/200619_FishGame_team.vcxproj
+++ b/수업/200619_FishGame_team/200619_FishGame_team.vcxproj
@@ -143,7 +143,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="temp.c" />
-    <ClCompile Include="turboc.c" />
+    <ClCompile Include="turboc.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="turboc.h" />
