--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,71 @@
 **/App.config
 
 # -unity-
-**/Unity/
+**/[Ll]ibrary/
+**/[Tt]emp/
+**/[Oo]bj/
+**/[Bb]uild/
+**/[Bb]uilds/
+**/[Ll]ogs/
+**/[Pp]ackages
+**/[Pp]rojectSettings
 
-# exception
+
+# Visual Studio cache directory
+**/*.vs/
+
+# Gradle cache directory
+**/*.gradle/
+
+# Auto Generated Jetbrains Rider Plugin
+**/[Aa]ssets/Plugins/Editor/JetBrains*
+
+# Auto Generated VS/MD/Consulo solution and project files
+**/ExportedObj/
+**/*.consulo/
+**/*.csproj
+**/*.unityproj
+**/*.sln
+**/*.suo
+**/*.tmp
+**/*.user
+**/*.userprefs
+**/*.pidb
+**/*.booproj
+**/*.svd
+**/*.pdb
+**/*.mdb
+**/*.opendb
+**/*.VC.db
+
+# Unity3D Generated meta files
+**/*.pidb.meta
+**/*.pdb.meta
+**/*.mdb.meta
+
+# Logs and Databases
+**/*.log
+**/*.DS_Store*
+**/Thumbs.db
+
+#Unity3D generated file on crash repots
+**/sysinfo.txt
+
+# Builds
+**/*.apk
+**/*.unitypackage
+
+# Crashlytics generated file
+**/crashlytics-build.properties
+
+# Source Files
+**/*.psd
+**/*.max
+
+# -Package Files-
 **/*.zip
+**/*.7z
+**/*.gz
+**/*.rar
+**/*.tar
+
